--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,10 @@
 
 /* .content {
   display: Flex;
-  flex-direction: column;
+  flex-direction: row;
   align-content: center;
+  align-items: center;
+  align-self: center;
   justify-content: center;
   flex-wrap: wrap;
 } */
