--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,9 @@
 }
 
 /* .content {
-  display: Flex;
+  display: flex;
+  min-width: 275px;
+  max-width: 350px;
   flex-direction: row;
-  align-content: center;
-  align-items: center;
-  align-self: center;
   justify-content: center;
-  flex-wrap: wrap;
 } */
