--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,105 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  max-width: 500px;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
 }
 
-/* .content {
+.navigation {
+  position: relative;
+  /* width: 100vh; */
+  height: 3rem;
   display: flex;
-  min-width: 275px;
-  max-width: 350px;
   flex-direction: row;
+  justify-content: space-evenly;
+  font-size: 1rem;
+  /* border: 1px solid black; */
+  background-color: #3399ff;
+  color: #444444;
+}
+
+.navIcon {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+.card {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   justify-content: center;
-} */
+  align-items: center;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.profileImage {
+  width: 20rem;
+  height: 20rem;
+  object-fit: cover;
+  margin: 1rem;
+}
+
+.dogName {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.dogDistance {
+  font-size: 1rem;
+}
+
+.buttonContainerNorm {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  position: relative;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.dislikeButton {
+  border: none;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 100%;
+  background-color: #805af1;
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.heartButton {
+  border: none;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 100%;
+  background-color: #ff7373;
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.buttonContainerFav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: relative;
+  width: 50%;
+  margin: 1rem;
+}
+
+.standardButton {
+  border: none;
+  text-decoration: none;
+  font-size: 1rem;
+  background-color: #ffffff;
+}
