--- a/src/styles.css
+++ b/src/styles.css
@@ -14,12 +14,11 @@
 .navigation {
   position: relative;
   /* width: 100vh; */
-  height: 3rem;
+  height: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   font-size: 1rem;
-  /* border: 1px solid black; */
   background-color: #3399ff;
   color: #444444;
 }
@@ -101,5 +100,9 @@
   border: none;
   text-decoration: none;
   font-size: 1rem;
-  background-color: #ffffff;
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 5px;
+  background-color: #ff7373;
+  color: #ffffff;
 }
